--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "prisma": "^4.7.1",
     "prisma-exclude": "^1.0.2",
     "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
