--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
+  },
+  "pkg": {
+    "assets": ["node_modules/.prisma/client/*.node"]
   }
 }
